--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta name="author" content="Ursudio" />
   <meta name="description" content="A Leaflet plugin for a popular WebGL Heatmap library.">
 
-  <link rel="canonical" href="http://ursudio.github.io/webgl-heatmap-leaflet/" />
+  <link rel="canonical" href="//ursudio.github.io/webgl-heatmap-leaflet/" />
   <link rel="icon" href="./favicon.ico" sizes="16x16 32x32 48x48 64x64" />
 
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans|Fjalla+One" type="text/css" />
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans|Fjalla+One" type="text/css" />
   <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
   <link rel="stylesheet" href="./css/style.css" type="text/css" />
 
