added uglify and minified dist file

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	<script src="./node_modules/leaflet/dist/leaflet-src.js"></script> 
 	-->
 	<script type="text/javascript" src="./dist/webgl-heatmap.js"></script>
-	<script type="text/javascript" src="./dist/webgl-heatmap-leaflet.js"></script>
+	<script type="text/javascript" src="./dist/webgl-heatmap-leaflet.min.js"></script>
 	
 	<script type="text/javascript" src="./js/script.js"></script>
 	
