initial commit to gh-pages; moved example to root

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 	for development: use with npm install && gulp
 	<script src="./node_modules/leaflet/dist/leaflet-src.js"></script> 
 	-->
-	<script type="text/javascript" src="../src/webgl-heatmap/webgl-heatmap.js"></script>
-	<script type="text/javascript" src="../src/leaflet-webgl-heatmap.js"></script>
+	<script type="text/javascript" src="./src/webgl-heatmap/webgl-heatmap.js"></script>
+	<script type="text/javascript" src="./src/leaflet-webgl-heatmap.js"></script>
 
 	<script type="text/javascript" src="./js/script.js"></script>	
 	</body>
