--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
   <meta name="author" content="Ursudio" />
   <meta name="description" content="A Leaflet plugin for a popular WebGL Heatmap library.">
 
-  <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
-  <link rel="apple-touch-icon-precomposed" href="./images/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="https://ursudio.github.io/leaflet-webgl-heatmap/images/apple-touch-icon.png">
+  <link rel="apple-touch-icon-precomposed" href="https://ursudio.github.io/leaflet-webgl-heatmap/images/apple-touch-icon.png">
 
   <!-- Schema.org markup for Google+ -->
   <meta itemprop="name" content="WebGL Heatmap Leaflet Plugin">
   <meta itemprop="description" content="A Leaflet plugin for a popular WebGL Heatmap library.">
-  <meta itemprop="image" content="./images/large-screenshot.jpg">
+  <meta itemprop="image" content="https://ursudio.github.io/leaflet-webgl-heatmap/images/large-screenshot.jpg">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="WebGL Heatmap Leaflet Plugin">
   <meta name="twitter:description" content="A Leaflet plugin for a popular WebGL Heatmap library.">
   <meta name="twitter:creator" content="@bozdoz">
-  <meta name="twitter:image" content="./images/large-screenshot.jpg">
+  <meta name="twitter:image" content="https://ursudio.github.io/leaflet-webgl-heatmap/images/large-screenshot.jpg">
 
   <!-- Open Graph data -->
   <meta property="og:title" content="WebGL Heatmap Leaflet Plugin">
   <meta property="og:type" content="article">
-  <meta property="og:url" content="http://ursudio.github.io/webgl-heatmap-leaflet/">
-  <meta property="og:image" content="./images/large-screenshot.jpg">
+  <meta property="og:url" content="https://ursudio.github.io/leaflet-webgl-heatmap/">
+  <meta property="og:image" content="https://ursudio.github.io/leaflet-webgl-heatmap/images/large-screenshot.jpg">
   <meta property="og:description" content="A Leaflet plugin for a popular WebGL Heatmap library.">
   <meta property="og:site_name" content="WebGL Heatmap Leaflet Plugin">
 
-  <link rel="canonical" href="https://ursudio.github.io/webgl-heatmap-leaflet/" />
+  <link rel="canonical" href="https://ursudio.github.io/leaflet-webgl-heatmap/" />
   <link rel="icon" href="./favicon.ico" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Fjalla+One" type="text/css" />
@@ -54,9 +54,9 @@
 		<div class="first container">
 			<div id="navigation">
 				<ul>
-					<li><a target="_blank" data-title="View on Github" href="https://github.com/ursudio/webgl-heatmap-leaflet"><img src="./images/github_icon_20.png" height="20"
+					<li><a target="_blank" data-title="View on Github" href="https://github.com/ursudio/leaflet-webgl-heatmap"><img src="./images/github_icon_20.png" height="20"
 					 /></a></li>
-					 <li><a target="_blank" data-title="Download from Github" href="https://github.com/ursudio/webgl-heatmap-leaflet/releases">Downloads</a></li>
+					 <li><a target="_blank" data-title="Download from Github" href="https://github.com/ursudio/leaflet-webgl-heatmap/releases">Downloads</a></li>
 					 <li class="floatRight"><a target="_blank" data-title="See more Ursudio projects" href="http://www.ursudio.com/"><img src="./images/apple-touch-icon.png" height="20"
 					 /></a></li>
 					 <li class="floatRight"><a target="_blank" data-title="Try out Leaflet" href="http://www.leafletjs.com/"><img src="./images/leaflet_icon_20.png" height="20"
