fix to broken png link

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
   <!-- Schema.org markup for Google+ -->
   <meta itemprop="name" content="WebGL Heatmap Leaflet Plugin">
   <meta itemprop="description" content="A Leaflet plugin for a popular WebGL Heatmap library.">
-  <meta itemprop="image" content="https://ursudio.github.io/leaflet-webgl-heatmap/images/large-screenshot.jpg">
+  <meta itemprop="image" content="https://ursudio.github.io/leaflet-webgl-heatmap/images/large-screenshot.png">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="WebGL Heatmap Leaflet Plugin">
   <meta name="twitter:description" content="A Leaflet plugin for a popular WebGL Heatmap library.">
   <meta name="twitter:creator" content="@bozdoz">
-  <meta name="twitter:image" content="https://ursudio.github.io/leaflet-webgl-heatmap/images/large-screenshot.jpg">
+  <meta name="twitter:image" content="https://ursudio.github.io/leaflet-webgl-heatmap/images/large-screenshot.png">
 
   <!-- Open Graph data -->
   <meta property="og:title" content="WebGL Heatmap Leaflet Plugin">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://ursudio.github.io/leaflet-webgl-heatmap/">
-  <meta property="og:image" content="https://ursudio.github.io/leaflet-webgl-heatmap/images/large-screenshot.jpg">
+  <meta property="og:image" content="https://ursudio.github.io/leaflet-webgl-heatmap/images/large-screenshot.png">
   <meta property="og:description" content="A Leaflet plugin for a popular WebGL Heatmap library.">
   <meta property="og:site_name" content="WebGL Heatmap Leaflet Plugin">
 
